--- a/layout.html
+++ b/layout.html
@@ -74,10 +74,10 @@
               <span class="text-lg">Home</span>
             </a>
             <a href="/product/index.html" class="link">
-              <span class="text-lg">Clothing</span>
+              <span class="text-lg">Men</span>
             </a>
             <a href="/product/index.html" class="link">
-              <span class="text-lg">Equipment</span>
+              <span class="text-lg">Women</span>
             </a>
             <a href="/product/index.html" class="link">
               <span class="text-lg">Sales</span>
