--- a/index.html
+++ b/index.html
@@ -321,6 +321,24 @@
           </div>
         </div>
       </section>
+      <section class="h-max py-20 relative">
+        <div class="h-full container flex-col gap-10 justify-center">
+          <div class="flex-row sm-flex-col justify-between items-center gap-4">
+            <h2 class="text-4xl leading-tight text-center">
+              New Launch This Month
+            </h2>
+            <button
+              class="border-2 w-max border-primary rounded px-5 py-3 flex-row items-center gap-4"
+            >
+              <span class="font-medium">Shop Now</span>
+            </button>
+          </div>
+          <div
+            class="grid grid-cols-4 sm-grid-cols-none gap-6"
+            id="products"
+          ></div>
+        </div>
+      </section>
     </main>
     <!-- Content End -->
 
