chore: Add categories link

--- a/index.html
+++ b/index.html
@@ -339,6 +339,53 @@
           ></div>
         </div>
       </section>
+      <section class="min-h-screen h-max relative pb-20">
+        <div class="h-full container flex-col gap-10 justify-center">
+          <div class="grid grid-rows-2 sm-grid-rows-none gap-6 h-full">
+            <div class="grid grid-cols-3 sm-grid-cols-none gap-6">
+              <div
+                class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-clothing"
+              >
+                <a href="/product/index.html" draggable="false">
+                  <h5 class="text-white text-3xl font-medium">Clothing</h5>
+                </a>
+              </div>
+              <div
+                class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-footwear"
+              >
+                <a href="/product/index.html" draggable="false">
+                  <h5 class="text-white text-3xl font-medium">Footwear</h5>
+                </a>
+              </div>
+              <div
+                class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-equipment"
+              >
+                <a href="/product/index.html" draggable="false">
+                  <h5 class="text-white text-3xl font-medium">Equipment</h5>
+                </a>
+              </div>
+            </div>
+            <div
+              class="flex-col justify-center items-center gap-6 rounded-xl p-8 py-16 bg-black sm-aspect-square"
+            >
+              <h5
+                class="text-primary text-5xl sm-text-3xl leading-tight w-1/2 text-center sm-w-full"
+              >
+                What do you need for the next adventure?
+              </h5>
+              <a
+                href="/product/index.html"
+                class="border-2 w-max border-white rounded px-5 py-3 flex-row items-center gap-4"
+              >
+                <span class="font-medium text-white">Explore Now</span>
+                <span class="text-xl text-white">
+                  <i class="fa-solid fa-arrow-right-long"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Content End -->
 
