--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@
               ducimus adipisci ex perferendis vitae doloremque nam magnam porro,
               repellendus consequuntur.
             </p>
+            <a
+              href="/product/index.html"
+              class="border-2 w-max border-primary rounded px-5 py-3 flex-row items-center gap-4"
+            >
+              <span class="font-medium text-lg">Explore Now</span>
+              <span class="text-xl text-primary">
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </span>
+            </a>
             <div class="h-20 sm-hidden"></div>
           </div>
           <div class="relative flex-col justify-center items-center">
@@ -377,8 +386,8 @@
                 href="/product/index.html"
                 class="border-2 w-max border-white rounded px-5 py-3 flex-row items-center gap-4"
               >
-                <span class="font-medium text-white">Explore Now</span>
-                <span class="text-xl text-white">
+                <span class="text-lg text-white">See Our Product</span>
+                <span class="text-2xl text-white">
                   <i class="fa-solid fa-arrow-right-long"></i>
                 </span>
               </a>
