fix: Update misc index.html

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           ></div>
         </div>
       </section>
-      <section class="min-h-screen h-max relative pb-20">
+      <section class="min-h-screen h-max relative py-20">
         <div class="h-full container flex-col gap-10 justify-center">
           <div class="grid grid-rows-2 sm-grid-rows-none gap-6 h-full">
             <div class="grid grid-cols-3 sm-grid-cols-none gap-6">
