feat:add feature product

--- a/product/index.html
+++ b/product/index.html
@@ -41,11 +41,9 @@
               <div class="top-content-sidebar">
                 <div class="bottom-content-sidebar">
                   <div class="title-sidebar">
-                    <h2>Selected Filters</h2>
+                    <h2>Selected Filters:</h2>
                   </div>
-                  <div class="clear-sidebar">
-                    <h1>Clear All</h1>
-                  </div>
+                
                 </div>
                 <div class="sidebar-wrap">
                   <div class="categori">
@@ -57,28 +55,28 @@
                   <div class="list-categori">
                     <ul>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Hardshell Jackets</a>
+                        <input type="checkbox" id="checkbox">
+                        <label for="checkbox">Hardshell Jackets</label>
                       </li>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Windbreaker</a>
+                        <input type="checkbox" id="checkbox1">
+                       <label for="checkbox1">Windbreaker</label>
                       </li>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Vests</a>
+                        <input type="checkbox" id="checkbox2">
+                       <label for="checkbox2">Vests</label>
                       </li>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Ski & Snowboard Jackets</a>
+                        <input type="checkbox" id="checkbox3">
+                       <label for="checkbox3">Ski & Snowboard Jackets</label>
                       </li>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Casual Shoes</a>
+                        <input type="checkbox" id="checkbox4">
+                       <label for="checkbox4"> Casual Shoes</label>
                       </li>
                       <li>
-                        <input type="checkbox">
-                        <a href="#">Hiking Shoes</a>
+                        <input type="checkbox" id="checkbox6">
+                       <label for="checkbox6">Hiking Shoes</label>
                       </li>
                     </ul>
                   </div>
