feat:add product

--- a/product/index.html
+++ b/product/index.html
@@ -223,12 +223,32 @@
               <div class="text">
                 <h1>Showing 1–4 of 20 results</h1>
               </div>
+              
               <div class="sort-section">
-                <h1>Sort: Popular | New | Discount | Price: Low/High</h1>
-                <select name="sort" id="sort">
-                  <option value="popular">Popular</option>
-                  <option value="new">New</option>
-                </select>
+                <div class="select-box">
+                  <div class="select-box__current" tabindex="1">
+                    <div class="select-box__value">
+                      <input class="select-box__input" type="radio" id="0" value="1" name="Ben" checked="checked"/>
+                      <p class="select-box__input-text">New</p>
+                    </div>
+                    <div class="select-box__value">
+                      <input class="select-box__input" type="radio" id="1" value="2" name="Ben" checked="checked"/>
+                      <p class="select-box__input-text">Popular</p>
+                    </div>
+                    <div class="select-box__value">
+                      <input class="select-box__input" type="radio" id="4" value="5" name="Ben" checked="checked"/>
+                      <h1 class="select-box__input-text">Sort by:</h1>
+                    </div><img class="select-box__icon" src="http://cdn.onlinewebfonts.com/svg/img_295694.svg" alt="Arrow Icon" aria-hidden="true"/>
+                  </div>
+                  <ul class="select-box__list">
+                    <li>
+                      <label class="select-box__option" for="0" aria-hidden="aria-hidden">New</label>
+                    </li>
+                    <li>
+                      <label class="select-box__option" for="1" aria-hidden="aria-hidden">Popular</label>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <div class="category-top"></div>
             </div>
