fix: Update misc accessibility

--- a/layout.html
+++ b/layout.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Hikstore - Hiking Store" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hikstore.pages.dev/" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/doc/preview.png" />
     <meta property="og:locale" content="en" />
     <link rel="canonical" href="https://hikstore.pages.dev/" />
     <meta name="theme-color" content="#f4f4f5" />
@@ -304,33 +304,34 @@
             </div>
           </div>
           <div class="flex-col gap-2">
-            <h4 class="text-xl">Support</h4>
-            <a href="#" class="link">Help & FAQ</a>
-            <a href="#" class="link">Term of Service</a>
-            <a href="#" class="link">Privacy Policy</a>
+            <h4 class="text-xl mb-2">Support</h4>
+            <a href="#" class="hover-underline">Help & FAQ</a>
+            <a href="#" class="hover-underline">Term of Service</a>
+            <a href="#" class="hover-underline">Privacy Policy</a>
           </div>
-          <div class="flex-col gap-2">
+          <div class="flex-col gap-4">
             <h4 class="text-xl">Payment Method</h4>
-            <div>
+            <div class="flex-row gap-6">
               <img
-                src="/img/footer-img/image-removebg-preview.png"
-                alt="Payment Method"
+                src="/img/footer/Paypal.svg"
+                style="height: 1.5rem"
+                alt="Paypal"
+              />
+              <img
+                src="/img/footer/MasterCard.svg"
+                style="height: 2rem"
+                alt="MasterCard"
               />
             </div>
             <h4 class="text-xl">Delivery Service</h4>
-            <div class="flex-row">
+            <div class="flex-row items-center gap-2">
+              <img src="/img/footer/J&T.svg" style="height: 1.5rem" alt="JNT" />
               <img
-                src="/img/footer-img/O1CN011Ya3Kg1OSw3sg81tm___6000000001705-2-tps-96-70-removebg-preview.png"
-                alt="J&T"
+                src="/img/footer/Gosend.svg"
+                style="height: 2.5rem"
+                alt="GoSend"
               />
-              <img
-                src="/img/footer-img/O1CN01DGonqR1H5qmpBI2hf___6000000000707-2-tps-96-70-removebg-preview.png"
-                alt="Gosend"
-              />
-              <img
-                src="/img/footer-img/O1CN01Y8JAuA1pB4EhCiF0K___6000000005321-2-tps-96-70-removebg-preview.png"
-                alt="JNE"
-              />
+              <img src="/img/footer/JNE.png" style="height: 2rem" alt="JNE" />
             </div>
           </div>
         </div>
