--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Hikstore - Hiking Store" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hikstore.pages.dev/" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/doc/preview.png" />
     <meta property="og:locale" content="en" />
     <link rel="canonical" href="https://hikstore.pages.dev/" />
     <meta name="theme-color" content="#f4f4f5" />
@@ -106,11 +106,13 @@
               >
             </button>
             <button
+              aria-label="User Profile"
               class="user-profile logout text-xl flex-row items-center border-l px-5 py-2 h-full"
             >
               <i class="fa-regular fa-user"></i>
             </button>
             <button
+              aria-label="Menu Button"
               class="btn-menu flex-row items-center gap-2 hidden sm-flex border-l px-5 py-2 h-full"
             >
               <span class="menu-icon">
@@ -194,13 +196,13 @@
           action=""
           class="border flex-row gap-2 bg-gray rounded px-4 py-2 hidden sm-flex"
         >
-          <label for="search">
+          <label for="search-side">
             <i class="fa-regular fa-magnifying-glass"></i>
           </label>
           <input
             type="search"
             name="search"
-            id="search"
+            id="search-side"
             placeholder="Search here..."
           />
         </form>
@@ -304,27 +306,23 @@
             <div class="grid grid-cols-4 sm-grid-cols-2 gap-6">
               <div class="flex-col items-center justify-center px-2 py-6">
                 <img
-                  src="https://cdn.worldvectorlogo.com/logos/ayura-logo-gray.svg"
-                  alt=""
+                  src="/img/partner/airbnb.svg"
+                  style="filter: grayscale(1)"
+                  alt="AirBNB"
                 />
               </div>
               <div class="flex-col items-center justify-center px-2 py-6">
                 <img
-                  src="https://cdn.worldvectorlogo.com/logos/ayura-logo-gray.svg"
-                  alt=""
+                  src="/img/partner/google.svg"
+                  style="filter: grayscale(1)"
+                  alt="Google"
                 />
               </div>
               <div class="flex-col items-center justify-center px-2 py-6">
-                <img
-                  src="https://cdn.worldvectorlogo.com/logos/ayura-logo-gray.svg"
-                  alt=""
-                />
+                <img src="/img/partner/instagram.svg" alt="Instagram" />
               </div>
               <div class="flex-col items-center justify-center px-2 py-6">
-                <img
-                  src="https://cdn.worldvectorlogo.com/logos/ayura-logo-gray.svg"
-                  alt=""
-                />
+                <img src="/img/partner/ayura.svg" alt="Ayura" />
               </div>
             </div>
           </div>
@@ -336,11 +334,12 @@
             <h2 class="text-4xl leading-tight text-center">
               New Launch This Month
             </h2>
-            <button
+            <a
+              href="/product/index.html"
               class="border-2 w-max border-primary rounded px-5 py-3 flex-row items-center gap-4"
             >
               <span class="font-medium">Shop Now</span>
-            </button>
+            </a>
           </div>
           <div
             class="grid grid-cols-4 sm-grid-cols-none gap-6"
@@ -348,46 +347,43 @@
           ></div>
         </div>
       </section>
-      <section class="min-h-screen h-max relative py-20">
+      <section class="min-h-screen h-max relative pb-10">
         <div class="h-full container flex-col gap-10 justify-center">
           <div class="grid grid-rows-2 sm-grid-rows-none gap-6 h-full">
             <div class="grid grid-cols-3 sm-grid-cols-none gap-6">
-              <div
+              <a
+                href="/product/index.html"
                 class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-clothing"
               >
-                <a href="/product/index.html" draggable="false">
-                  <h5 class="text-white text-3xl font-medium">Clothing</h5>
-                </a>
-              </div>
-              <div
+                <span class="text-white text-3xl font-medium">Clothing</span>
+              </a>
+              <a
+                href="/product/index.html"
                 class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-footwear"
               >
-                <a href="/product/index.html" draggable="false">
-                  <h5 class="text-white text-3xl font-medium">Footwear</h5>
-                </a>
-              </div>
-              <div
+                <span class="text-white text-3xl font-medium">Footwear</span>
+              </a>
+              <a
+                href="/product/index.html"
                 class="flex-col justify-end rounded-xl sm-aspect-square p-8 bg-equipment"
               >
-                <a href="/product/index.html" draggable="false">
-                  <h5 class="text-white text-3xl font-medium">Equipment</h5>
-                </a>
-              </div>
+                <span class="text-white text-3xl font-medium">Equipment</span>
+              </a>
             </div>
             <div
-              class="flex-col justify-center items-center gap-6 rounded-xl p-8 py-16 bg-black sm-aspect-square"
+              class="flex-col justify-center items-center gap-6 rounded-xl p-8 py-16 bg-black"
             >
-              <h5
+              <h3
                 class="text-primary text-5xl sm-text-3xl leading-tight w-1/2 text-center sm-w-full"
               >
                 What do you need for the next adventure?
-              </h5>
+              </h3>
               <a
                 href="/product/index.html"
-                class="border-2 w-max border-white rounded px-5 py-3 flex-row items-center gap-4"
+                class="border-2 w-max border-white bg-white rounded px-4 py-2 flex-row items-center gap-4"
               >
-                <span class="text-lg text-white">See Our Product</span>
-                <span class="text-2xl text-white">
+                <span class="text-md">See Our Product</span>
+                <span class="text-xl">
                   <i class="fa-solid fa-arrow-right-long"></i>
                 </span>
               </a>
@@ -417,12 +413,11 @@
               online.
             </p>
             <div class="flex-row gap-4">
-              <a href="#" class="h-10 w-10 bg-facebook text-white rounded-full">
-                <span
-                  class="flex-row justify-center items-center h-full text-xl"
-                >
-                  <i class="fa-brands fa-facebook-f"></i>
-                </span>
+              <a
+                href="#"
+                class="h-10 w-10 bg-facebook text-white rounded-full flex-row justify-center items-center h-full text-xl"
+              >
+                <i class="fa-brands fa-facebook-f"></i>
               </a>
               <a
                 href="#"
@@ -444,33 +439,34 @@
             </div>
           </div>
           <div class="flex-col gap-2">
-            <h4 class="text-xl">Support</h4>
-            <a href="#" class="link">Help & FAQ</a>
-            <a href="#" class="link">Term of Service</a>
-            <a href="#" class="link">Privacy Policy</a>
+            <h3 class="text-xl mb-2">Support</h3>
+            <a href="#" class="hover-underline">Help &#38; FAQ</a>
+            <a href="#" class="hover-underline">Term of Service</a>
+            <a href="#" class="hover-underline">Privacy Policy</a>
           </div>
-          <div class="flex-col gap-2">
+          <div class="flex-col gap-4">
             <h4 class="text-xl">Payment Method</h4>
-            <div>
+            <div class="flex-row gap-6">
               <img
-                src="/img/footer-img/image-removebg-preview.png"
-                alt="Payment Method"
+                src="/img/footer/Paypal.svg"
+                style="height: 1.5rem"
+                alt="Paypal"
+              />
+              <img
+                src="/img/footer/MasterCard.svg"
+                style="height: 2rem"
+                alt="MasterCard"
               />
             </div>
             <h4 class="text-xl">Delivery Service</h4>
-            <div class="flex-row">
+            <div class="flex-row items-center gap-2">
+              <img src="/img/footer/J&T.svg" style="height: 1.5rem" alt="JNT" />
               <img
-                src="/img/footer-img/O1CN011Ya3Kg1OSw3sg81tm___6000000001705-2-tps-96-70-removebg-preview.png"
-                alt="J&T"
+                src="/img/footer/Gosend.svg"
+                style="height: 2.5rem"
+                alt="GoSend"
               />
-              <img
-                src="/img/footer-img/O1CN01DGonqR1H5qmpBI2hf___6000000000707-2-tps-96-70-removebg-preview.png"
-                alt="Gosend"
-              />
-              <img
-                src="/img/footer-img/O1CN01Y8JAuA1pB4EhCiF0K___6000000005321-2-tps-96-70-removebg-preview.png"
-                alt="JNE"
-              />
+              <img src="/img/footer/JNE.png" style="height: 2rem" alt="JNE" />
             </div>
           </div>
         </div>
