fix: Update misc canonical url

--- a/product/index.html
+++ b/product/index.html
@@ -11,16 +11,10 @@
 
     <meta property="og:title" content="Products - Hiking Store" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://hikstore.pages.dev/product/index.html"
-    />
+    <meta property="og:url" content="https://hikstore.pages.dev/product/" />
     <meta property="og:image" content="/doc/preview.png" />
     <meta property="og:locale" content="en" />
-    <link
-      rel="canonical"
-      href="https://hikstore.pages.dev/product/index.html"
-    />
+    <link rel="canonical" href="https://hikstore.pages.dev/product/" />
     <meta name="theme-color" content="#f4f4f5" />
     <meta name="msapplication-TileColor" content="#f4f4f5" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
