fix: Optimize accessibility and SEO

--- a/product/index.html
+++ b/product/index.html
@@ -107,6 +107,7 @@
               >
             </button>
             <button
+              aria-label="User Profile"
               class="user-profile logout text-xl flex-row items-center border-l px-5 py-2 h-full"
             >
               <i class="fa-regular fa-user"></i>
@@ -291,7 +292,7 @@
                   </div>
                   <div class="sidebar-wrap">
                     <div class="categori">
-                      <h4>Filter by Cattegory:</h4>
+                      <h3>Filter by Cattegory:</h4>
                     </div>
                     <div class="list-categori">
                       <ul>
@@ -329,86 +330,7 @@
                       <h4>Filter by Color:</h4>
                     </div>
                     <div class="wrap-option-color">
-                      <ul>
-                        <!-- <li>
-                          <label
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: #000000"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </label>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: #ff0000"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: #ffbb00"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: #0004ff"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: #fdf908"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: rgb(214, 173, 173)"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="background-color: Green"
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li>
-                        <li>
-                          <span
-                            class="option-color"
-                            data-color="#9be8d3"
-                            style="
-                              background-image: linear-gradient(
-                                to bottom right,
-                                red,
-                                yellow
-                              );
-                            "
-                          >
-                            <input type="checkbox" style="opacity: 0" />
-                          </span>
-                        </li> -->
-                      </ul>
+                      <ul></ul>
                     </div>
                   </div>
                   <div class="sidebar-wrap-5">
@@ -464,7 +386,7 @@
             <div class="shop-section">
               <div class="shop-title">
                 <div class="text">
-                  <h4 class="text-xl">Showing 12 of 20 results</h4>
+                  <h4 class="text-xl">Showing 24 of 100 results</h4>
                 </div>
                 <div class="sort-section">
                   <select name="" id="">
