fix: Update misc link in sidebar

--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
           href="/product/index.html"
           class="nav-link flex-row justify-between items-center"
         >
-          <span class="text-xl">Clothing</span>
+          <span class="text-xl">Men</span>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
         <a
           href="/product/index.html"
           class="nav-link flex-row justify-between items-center"
         >
-          <span class="text-xl">Equipment</span>
+          <span class="text-xl">Women</span>
           <i class="fa-solid fa-arrow-right"></i>
         </a>
         <a
