chore: Optimize SEO and twitter card

--- a/index.html
+++ b/index.html
@@ -2,19 +2,40 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hikstore- Hiking Store</title>
+    <title>Hikstore - Hiking Online Store Official</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Everything you need for your next Mountain Adventure is available online. Check out Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment."
+      content="Official Hikstore Online Store | Everything you need for your next Mountain Adventure is available online. Check out Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment. Are you ready?"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <meta property="og:title" content="Hikstore - Hiking Store" />
+    <meta
+      name="keywords"
+      content="hiking, hikstore, online, store, hiking store, store, shop, men, women"
+    />
+    <meta property="og:title" content="Hikstore - Hiking Online Store" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hikstore.pages.dev/" />
-    <meta property="og:image" content="/doc/preview.png" />
+    <meta
+      property="og:image"
+      content="https://hikstore.pages.dev/doc/preview.png"
+    />
     <meta property="og:locale" content="en" />
-    <link rel="canonical" href="https://hikstore.pages.dev/" />
+    <meta
+      property="og:description"
+      content="Official Hikstore Online Store | Everything you need for your next Mountain Adventure is available online. Check out Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment. Are you ready?"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@hikstore" />
+    <meta name="twitter:creator" content="@natainditama" />
+    <meta name="twitter:title" content="Hikstore - Hiking Online Store" />
+    <meta
+      property="og:description"
+      content="Official Hikstore Online Store | Everything you need for your next Mountain Adventure is available online. Check out Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment.Are you ready now?"
+    />
+    <meta
+      name="twitter:image"
+      content="https://hikstore.pages.dev/doc/preview.png"
+    />
     <meta name="theme-color" content="#f4f4f5" />
     <meta name="msapplication-TileColor" content="#f4f4f5" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
@@ -36,12 +57,13 @@
       sizes="16x16"
       href="/img/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="site.webmanifest" />
     <link
       rel="mask-icon"
       href="/img/icons/safari-pinned-tab.svg"
       color="#ffcb37"
     />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="canonical" href="https://hikstore.pages.dev/" />
     <link rel="shortcut icon" href="/img/icons/favicon.ico" />
 
     <link rel="stylesheet" href="/css/main.css" />
